translated comments, refactored compoents, removed unused components