@@ -13,7 +13,6 @@ import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLConnection;
-import java.util.Arrays;
 import java.util.List;
 import javax.swing.*;
 
@@ -23,7 +22,6 @@ import org.woped.editor.tools.ApiHelper;
 import org.woped.gui.lookAndFeel.WopedButton;
 import org.woped.gui.translations.Messages;
 
-@SuppressWarnings("serial")
 public class ConfNLPToolsPanel extends AbstractConfPanel {
     private JCheckBox useBox = null;
     private JPanel enabledPanel = null;
@@ -54,7 +52,7 @@ public class ConfNLPToolsPanel extends AbstractConfPanel {
     private WopedButton resetButton = null;
     private JTextArea promptText = null;
     private WopedButton checkConnectionButton = null;
-    List<String> models = Arrays.asList("") ;
+    List<String> models = List.of("");
     {
         try {
             models = ApiHelper.fetchModels();
@@ -86,7 +84,7 @@ public class ConfNLPToolsPanel extends AbstractConfPanel {
         }
         ConfigurationManager.getConfiguration().setProcess2TextServerHost(getServerURLText().getText());
         ConfigurationManager.getConfiguration().setProcess2TextServerURI(getManagerPathText().getText());
-        if (getServerPortText().getText().equals("")) {
+        if (getServerPortText().getText().isEmpty()) {
             ConfigurationManager.getConfiguration().setProcess2TextServerPort(0);
         } else {
             ConfigurationManager.getConfiguration()
@@ -98,7 +96,7 @@ public class ConfNLPToolsPanel extends AbstractConfPanel {
 
         ConfigurationManager.getConfiguration().setText2ProcessServerURI(getManagerPathText_T2P().getText());
 
-        if (getServerPortText_T2P().getText().equals("")) {
+        if (getServerPortText_T2P().getText().isEmpty()) {
             ConfigurationManager.getConfiguration().setText2ProcessServerPort(0);
         } else {
             ConfigurationManager.getConfiguration()
@@ -622,7 +620,7 @@ public class ConfNLPToolsPanel extends AbstractConfPanel {
     private void testProcess2TextConnection() {
         URL url = null;
         String connection = "http://" + getServerURLText().getText() + ":" + getServerPortText().getText() + getManagerPathText().getText();
-        String arg[] = {connection, ""};
+        String[] arg = {connection, ""};
 
         try {
             url = new URL(connection);
@@ -632,8 +630,6 @@ public class ConfNLPToolsPanel extends AbstractConfPanel {
                 arg[1] = "P2T";
                 JOptionPane.showMessageDialog(this.getSettingsPanel(), Messages.getString("Paraphrasing.Webservice.Success.Message", arg), Messages.getString("Paraphrasing.Webservice.Success.Title"), JOptionPane.INFORMATION_MESSAGE);
             }
-        } catch (MalformedURLException mue) {
-            JOptionPane.showMessageDialog(this.getSettingsPanel(), Messages.getString("Paraphrasing.Webservice.Error.WebserviceException.Message", arg), Messages.getString("Paraphrasing.Webservice.Error.Title"), JOptionPane.ERROR_MESSAGE);
         } catch (IOException ex) {
             JOptionPane.showMessageDialog(this.getSettingsPanel(), Messages.getString("Paraphrasing.Webservice.Error.WebserviceException.Message", arg), Messages.getString("Paraphrasing.Webservice.Error.Title"), JOptionPane.ERROR_MESSAGE);
         }
@@ -642,7 +638,7 @@ public class ConfNLPToolsPanel extends AbstractConfPanel {
     private void testText2ProcessConnection() {
         URL url;
         String connection = "http://" + getServerURLText_T2P().getText() + ":" + getServerPortText_T2P().getText() + getManagerPathText_T2P().getText();
-        String arg[] = {connection, ""};
+        String[] arg = {connection, ""};
 
         try {
             url = new URL(connection);
@@ -651,8 +647,6 @@ public class ConfNLPToolsPanel extends AbstractConfPanel {
                 arg[1] = "T2P";
                 JOptionPane.showMessageDialog(this.getSettingsPanel_T2P(), Messages.getString("Paraphrasing.Webservice.Success.Message", arg), Messages.getString("Paraphrasing.Webservice.Success.Title"), JOptionPane.INFORMATION_MESSAGE);
             }
-        } catch (MalformedURLException mue) {
-            JOptionPane.showMessageDialog(this.getSettingsPanel_T2P(), Messages.getString("Paraphrasing.Webservice.Error.WebserviceException.Message", arg), Messages.getString("Paraphrasing.Webservice.Error.Title"), JOptionPane.ERROR_MESSAGE);
         } catch (IOException ex) {
             JOptionPane.showMessageDialog(this.getSettingsPanel_T2P(), Messages.getString("Paraphrasing.Webservice.Error.WebserviceException.Message", arg), Messages.getString("Paraphrasing.Webservice.Error.Title"), JOptionPane.ERROR_MESSAGE);
         }
